fix: code readablity

--- a/projects/6-ImageGallary/style.css
+++ b/projects/6-ImageGallary/style.css
@@ -2,6 +2,7 @@
   column-width: 300px;
   max-width: 60%;
   margin: 0 auto;
+  padding-bottom: 5em;
 }
 
 img.landscape {
@@ -17,12 +18,12 @@ img.landscape {
   margin-bottom: 2.5em;
 }
 
-.image-card .image-card--content {
+.image-card--content {
   display: block;
   width: 100%;
 }
 
-.image-card .image-card--name {
+.image-card--name {
   display: inline-flex;
   align-items: center;
   gap: 0.5em;
@@ -38,35 +39,11 @@ img.landscape {
   padding-inline-start: 0.2em;
   padding-inline-end: 0.8em;
 
-  /* transform: rotate(5deg); */
   border-radius: 30px;
 }
 
-.image-card .image-card--name img {
+.image-card--name img {
   border-radius: 50%;
   width: 50px;
   height: 50px;
 }
-
-/* .image-container {
-  max-width: 50%;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(3, minmax(220px, 1fr));
-  gap: 1em;
-  grid-auto-flow: dense;
-}
-
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-img.landscape {
-  grid-column-end: span 3;
-}
-
-img.tower {
-  grid-row-end: span 4;
-} */
